src/objects/Account_Type_Settings__c.object
<CustomObject>
    <description>Object supports Account Type mapping from Contract, Contract Type, Bill Method and Service Territory.</description>
    <fields>
        <fullName>Account_Type_Code__c</fullName>
        <label>Account Type Code</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>RETAIL_STANDALONE</fullName>
                </value>
                <value>
                    <fullName>RETAIL_SUBACCT</fullName>
                </value>
                <value>
                    <fullName>WHOLESALE</fullName>
                </value>
                <value>
                    <fullName>FLOW_THROUGH</fullName>
                </value>
                <value>
                    <fullName>UCBNONPOR_RR</fullName>
                </value>
                <value>
                    <fullName>UCBPOR_RR</fullName>
                </value>
                <value>
                    <fullName>RETAIL_FRIEND</fullName>
                </value>
                <value>
                    <fullName>UCBPOR_BR</fullName>
                </value>
                <value>
                    <fullName>UCBNONPOR</fullName>
                </value>
                <value>
                    <fullName>UCBNONPOR_BR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bill_Method__c</fullName>
        <label>Bill Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DUAL</fullName>
                </value>
                <value>
                    <fullName>Rate Ready</fullName>
                </value>
                <value>
                    <fullName>Bill Ready</fullName>
                </value>
                <value>
                    <fullName>SBO/ESP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Code__c</fullName>
        <formula>CASE( Contract_Type__c , 
&quot;Small Stable Contract - Evergreen&quot;, &quot;CT1&quot;,
&quot;Small Stable Contract - MTM Renewal&quot;, &quot;CT2&quot;,
&quot;Large Stable Contract&quot;, &quot;CT3&quot;,
&quot;Large Stable PT-C Contract&quot;, &quot;CT4&quot;,
&quot;Hybrid&quot;, &quot;CT5&quot;,
&quot;Block and Index&quot;, &quot;CT6&quot;,
&quot;Non Standard&quot;, &quot;CT7&quot;,
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <label>Contract Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>UCBNONPOR</fullName>
                </value>
                <value>
                    <fullName>IEC</fullName>
                </value>
                <value>
                    <fullName>TIER_1_2</fullName>
                </value>
                <value>
                    <fullName>TIER_A</fullName>
                </value>
                <value>
                    <fullName>UCBPOR</fullName>
                </value>
                <value>
                    <fullName>UCBPOR_BR</fullName>
                </value>
                <value>
                    <fullName>WESA</fullName>
                </value>
                <value>
                    <fullName>GFEC</fullName>
                </value>
                <value>
                    <fullName>Small Stable Contract - Evergreen</fullName>
                </value>
                <value>
                    <fullName>Small Stable Contract - MTM Renewal</fullName>
                </value>
                <value>
                    <fullName>Large Stable Contract</fullName>
                </value>
                <value>
                    <fullName>Large Stable PT-C Contract</fullName>
                </value>
                <value>
                    <fullName>Hybrid</fullName>
                </value>
                <value>
                    <fullName>Block and Index</fullName>
                </value>
                <value>
                    <fullName>Non Standard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <formula>IF( ISPICKVAL( Service_Territory__c , &apos;&apos;) , &apos;&apos;, text(Service_Territory__c) &amp;  IF(  ISNULL( Contract_Code__c ) ||  ISBLANK( Contract_Code__c )  , &apos; : &apos;+TEXT( Contract_Type__c ) , &apos; : &apos;+ Contract_Code__c )  &amp;  IF( ISPICKVAL( Bill_Method__c , &apos;&apos;) , &apos;&apos;, &apos; : &apos;+ text(Bill_Method__c) ))</formula>
        <label>Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_Class__c</fullName>
        <defaultValue>&quot;DEFAULT&quot;</defaultValue>
        <label>Rate Class</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Service_Territory__c</fullName>
        <label>Service Territory</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Service_Territory</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <label>Account Type Settings</label>
    <nameField>
        <displayFormat>ATS-{0000}</displayFormat>
        <label>Account Type Settings Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Type Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>